# simple-singleton

./: CHANGELOG.md  README.md  pyproject.toml
simple_singleton/: __init__.py  singleton.py
tests/: test_singleton.py
